# front

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.claude/project/: deterministic-signals.md  signals.md
.claude/project/followups/: CLOSED.md  INDEX.md  app-struct-channel-plumbing.md  mqtt-documented-not-implemented.md  nearest-free-cell-ring-search.md  obs-area-404-requested-data-not-found.md  obs-backdrop-not-zoom-gated.md  obs-location-cache-memory-only.md  obs-partial-lazy-reset.md  obs-station-identity-is-the-name.md  obs-station-list-off-budget.md  obs-zoom-cutoff-mismatch.md  recolor-label-full-grid-scan.md  tui-config-editor-f1-inline-table.md  tui-config-editor-f4-unreachable-invariant.md  tui-editable-config-with-verification.md
.claude/project/signals/: app-core.md  ci-release.md  geo.md  location.md  persistence.md  providers.md  rendering.md
.github/workflows/: ci.yml  version-guard.yml
.zed/: format.sh  tasks.json
docs/design/: map-legend.md  observation-tiering.md  radar-direct-resample.md  radar-flow-interpolation.md  task-system-unification.md  tui-config-editor.md  zoom-stable-caching.md
docs/spec/: backlog-cleanup.md  location-accuracy-gate.md  map-legend.md  observation-tiering.md  radar-direct-resample.md  radar-flow-interpolation.md  task-system-unification.md  tui-config-editor.md  zoom-stable-caching.md
examples/: geocode_probe.rs  location_probe.rs
src/: app.rs  cache.rs  cli.rs  config.rs  flow.rs  geo.rs  keys.rs  layers.rs  lib.rs  main.rs  retry.rs  settings.rs  ui.rs
src/providers/: eumetnet.rs  geoclue.rs  geocode.rs  lightning.rs  maps.rs  meteoalarm.rs  meteogate.rs  mod.rs  verify.rs
src/providers/location/: geoclue.rs  ip.rs  macos.rs  mod.rs  windows.rs
