[package]
name = "front"
version = "26.1.0"
description = "Fancy Radar ObservatioN Tool - a terminal weather radar map"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MysteriousWolf/front"
edition = "2021"
resolver = "2"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6"
futures = "0.3"
tiff = "0.11"
ratatui = "0.30"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = { version = "0.24", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
zstd = "0.13.3"
libc = "0.2.186"

# Location backends are per-platform: GeoClue speaks D-Bus (Linux only),
# Windows and macOS use their native OS location services.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Devices_Geolocation",
    "Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-location = { version = "0.3", features = [
    "CLLocation",
    "CLLocationManager",
    "CLLocationManagerDelegate",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSError",
    "NSRunLoop",
] }

[features]
default = ["mqtt", "lightning"]
mqtt = ["dep:rumqttc"]
lightning = ["dep:tokio-tungstenite"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
